[-] New layout for start activity, added new icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,10 +13,11 @@
     <string name="gameTitle">Chain Clicker</string>
     <string name="newGame">New game</string>
     <string name="statistic">Statistics</string>
-    <string name="startTitle">Welcome to donut clicker!</string>
+    <string name="startTitle">P2P Clicker</string>
     <string name="endGame">The end!</string>
     <string name="titleDialog">Game over</string>
     <string name="continueGameDialog">OK</string>
     <string name="statisticsDesc">You won</string>
     <string name="diagrammTitle">Diagram</string>
+	<string name="multiplayer">Multiplayer</string>
 </resources>
