--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="statisticsDesc">You won</string>
     <string name="diagrammTitle">Diagram</string>
 	<string name="multiplayer">Multiplayer</string>
+	<string name="opponents_header">Choose your destiny</string>
 </resources>
