--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="diagrammTitle">Diagram</string>
 	<string name="multiplayer">Multiplayer</string>
 	<string name="opponents_header">Choose your destiny</string>
+	<string name="genesis_block">Genesis</string>
 </resources>
