[-] First try to integrate WiFiDirect using services

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
 	<string name="multiplayer">Multiplayer</string>
 	<string name="opponents_header">Choose your destiny</string>
 	<string name="genesis_block">Genesis</string>
+    <string name="empty"/>
+	<string name="update">Update opponent list</string>
 </resources>
