--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
 	<string name="genesis_block">Genesis</string>
     <string name="empty"/>
 	<string name="update">Update opponent list</string>
+	<string name="back">Back</string>
 </resources>
