[#7] Added End game dialog, added GamePresenter, migrating to MVP pattern

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,36 @@
 <resources>
-    <string name="app_name">P2P-Clicker</string>
-    <string name="nullPoints">00000</string>
-    <string name="clicked">+1</string>
-    <string name="title">Donut clicker</string>
-    <string name="backToGame">Back to game</string>
-    <string name="name">Buy donuts per click!</string>
-    <string name="description_2">+2 donuts (-10 points)</string>
-    <string name="description_4">+4 donuts (-20 points)</string>
-    <string name="description_5">+5 donuts (-30 points)</string>
-    <string name="shop">Go to shop</string>
-    <string name="shopTitle">Shop</string>
-    <string name="gameTitle">Chain Clicker</string>
-    <string name="newGame">New game</string>
-    <string name="statistic">Statistics</string>
-    <string name="startTitle">P2P Clicker</string>
-    <string name="endGame">The end!</string>
-    <string name="titleDialog">Game over</string>
-    <string name="continueGameDialog">OK</string>
-    <string name="statisticsDesc">You won</string>
-    <string name="diagrammTitle">Diagram</string>
+	<string name="app_name">P2P-Clicker</string>
+	<string name="empty"/>
+	<string name="nullPoints">00000</string>
+
+	<string name="clicked">+1</string>
+	<string name="title">Donut clicker</string>
+	<string name="backToGame">Back to game</string>
+	<string name="name">Buy donuts per click!</string>
+	<string name="description_2">+2 donuts (-10 points)</string>
+	<string name="description_4">+4 donuts (-20 points)</string>
+	<string name="description_5">+5 donuts (-30 points)</string>
+	<string name="shop">Go to shop</string>
+	<string name="shopTitle">Shop</string>
+	<string name="gameTitle">Chain Clicker</string>
+	<string name="newGame">New game</string>
+	<string name="statistic">Statistics</string>
+	<string name="startTitle">P2P Clicker</string>
+	<string name="endGame">The end!</string>
+	<string name="titleDialog">Game over</string>
+	<string name="continueGameDialog">OK</string>
+	<string name="statisticsDesc">You won</string>
+	<string name="diagrammTitle">Diagram</string>
 	<string name="multiplayer">Multiplayer</string>
 	<string name="opponents_header">Choose your destiny</string>
 	<string name="genesis_block">Genesis</string>
-    <string name="empty"/>
 	<string name="update">Update opponent list</string>
 	<string name="back">Back</string>
 	<string name="opponent_icon_description">Opponent icon</string>
+	<string name="round_over">Round over</string>
+	<string name="test_filler">Test filler</string>
+	<string name="dialog_instruction">Please, enter message for your opponent</string>
+	<string name="you_lose">You lose…</string>
+	<string name="you_win">You win!!!</string>
+	<string name="dialog_message_for_opponent">Message for opponent</string>
 </resources>
