[#10][#11] Added shared preference for saving game data     - Button "go to shop" removed from game activity     - Changed class GameActivity     - Changed class ShopActivity     - In shop activity added counters DPC and points     - Changed MainActivity     - In main activity added two new buttons: 1. "Go to shop" 2. "CLEAR GAME SAVES"     - Added new string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="empty"/>
 	<string name="update">Update opponent list</string>
 	<string name="back">Back</string>
+    <string name="gameSaves">game_saves</string>
+    <string name="points">Points: </string>
+    <string name="DPC">Donuts Per Click: </string>
+    <string name="clearGameSaves">Clear game saves</string>
 </resources>
