--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="nullPoints">00000</string>
     <string name="clicked">+1</string>
     <string name="title">Donut clicker</string>
-    <string name="backToGame">Back to game</string>
+    <string name="backToGame">Back to menu</string>
     <string name="name">Buy donuts per click!</string>
-    <string name="description_2">+2 donuts (-10 points)</string>
-    <string name="description_4">+4 donuts (-20 points)</string>
+    <string name="description_2">Increment tap +2 (-10 points)</string>
+    <string name="description_4">Auto tap (-20 points)</string>
     <string name="description_5">+5 donuts (-30 points)</string>
     <string name="shop">Go to shop</string>
     <string name="shopTitle">Shop</string>
@@ -27,6 +27,8 @@
 	<string name="back">Back</string>
     <string name="gameSaves">game_saves</string>
     <string name="points">Points: </string>
-    <string name="DPC">Donuts Per Click: </string>
+    <string name="DPC">Donuts Per Tap: </string>
     <string name="clearGameSaves">Clear game saves</string>
+    <string name="IncTap">Increment Tap</string>
+    <string name="AutoTap">Auto Tap</string>
 </resources>
