--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="clearGameSaves">Clear game saves</string>
     <string name="IncTap">Increment Tap</string>
     <string name="AutoTap">Auto Tap</string>
+    <string name="multiplayer_points">Multiplayer Points: </string>
 </resources>
