--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
 	<string name="multiplayerText">Multiplayer</string>
 	<string name="new_gameText">New game</string>
 	<string name="imageofdonutText">imageOfDonut</string>
+	<string name="warning_title">Warning</string>
 </resources>
