[#7] Add waiting connection dialog, code cleanup, refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="AutoClick">Auto Click</string>
     <string name="multiplayer_clicks">Multiplayer Clicks: </string>
     <string name="select">Select</string>
+	<string name="cancel">Cancel</string>
+	<string name="waiting_opponent">Waiting opponent...</string>
 </resources>
