--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,10 @@
 	<string name="title">Donut clicker</string>
 	<string name="backToMenu">Back to menu</string>
 	<string name="name">Buy donuts per click!</string>
-	<string name="tempIncrementButton">Increment tap +2 (-10 points)</string>
-	<string name="tempAutoClickButton">Auto tap (-20 points)</string>
-	<string name="description_5">+5 donuts (-30 points)</string>
+	<string name="tempIncrementButton">Increment click +2 (-10 clicks)</string>
+	<string name="tempAutoClickButton">Auto click (-20 clicks)</string>
+	<string name="mAutoClick">Auto click (-200 Multiplayer clicks)</string>
+	<string name="mIncrementClick">Increment click  +1 (-100 Multiplayer clicks)</string>
 	<string name="shop">Go to shop</string>
 	<string name="shopTitle">Shop</string>
 	<string name="gameTitle">Chain Clicker</string>
@@ -49,4 +50,5 @@
     <string name="select">Select</string>
 	<string name="cancel">Cancel</string>
 	<string name="waiting_opponent">Waiting opponent...</string>
+	<string name="multiplayer_auto_clicks">Multiplayer Auto Clicks: </string>
 </resources>
