[#10][#16] Added coins/multiplayer coins Added interaction with progress bar Small refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
 	<string name="title">Donut clicker</string>
 	<string name="backToMenu">Back to menu</string>
 	<string name="name">Buy donuts per click!</string>
-	<string name="tempIncrementButton">Increment click +2 (-10 clicks)</string>
-	<string name="tempAutoClickButton">Auto click (-20 clicks)</string>
-	<string name="mAutoClick">Auto click (-200 Multiplayer clicks)</string>
-	<string name="mIncrementClick">Increment click  +1 (-100 Multiplayer clicks)</string>
+	<string name="tempIncrementButton">Increment click +1 (-10 coins)</string>
+	<string name="tempAutoClickButton">Auto click (-20 coins)</string>
+	<string name="mAutoClick">Auto click (-200 Multiplayer coins)</string>
+	<string name="mIncrementClick">Increment click  +1 (-100 Multiplayer coins)</string>
 	<string name="shop">Go to shop</string>
 	<string name="shopTitle">Shop</string>
 	<string name="gameTitle">Chain Clicker</string>
@@ -41,12 +41,12 @@
 	<string name="imageofdonutText">imageOfDonut</string>
 	<string name="warning_title">Warning</string>
     <string name="gameSaves">game_saves</string>
-    <string name="clicks">Clicks: </string>
+    <string name="coins">Coins: </string>
     <string name="DPC">Donuts Per Click: </string>
     <string name="clearGameSaves">Clear game saves</string>
     <string name="IncClick">Increment Click</string>
     <string name="AutoClick">Auto Click</string>
-    <string name="multiplayer_clicks">Multiplayer Clicks: </string>
+    <string name="multiplayer_coins">Multiplayer Coins: </string>
     <string name="select">Select</string>
 	<string name="cancel">Cancel</string>
 	<string name="waiting_opponent">Waiting opponent...</string>
