--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
 	<string name="multiplayer_auto_clicks">Multiplayer Auto Clicks:</string>
 	<string name="dialog_acceptance_message">Are you ready for epic donut battle with…</string>
 	<string name="question_mark">\?</string>
+	<string name="resolve_ip">Resolve IP</string>
 </resources>
