--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
 	<string name="dialog_acceptance_message">Are you ready for epic donut battle with…</string>
 	<string name="question_mark">\?</string>
 	<string name="resolve_ip">Resolve IP</string>
+    <string name="buy">Buy</string>
 </resources>
